k8s/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: fast-food-svc
  labels:
    app: fast-food
spec:
  selector:
    app: fast-food
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
